Archive2/26/679490cccfddea/output
main.cpp:29:32: error: expected nested-name-specifier before '__attribute__'
         #define SOL_DEPRECATED __attribute__((deprecated)) 
                                ^
main.cpp:41:7: note: in expansion of macro 'SOL_DEPRECATED'
 using SOL_DEPRECATED rusty = shiny;
       ^
